created the basic new game form added new settings tab with clear storage option for beta users

--- a/www/index.html
+++ b/www/index.html
@@ -37,6 +37,7 @@
     <!-- Controllers -->
     <script src="js/components/dashboard/dashboard.controller.js"></script>
     <script src="js/components/boardPage/boardPage.controller.js"></script>
+    <script src="js/components/settings/settings.controller.js"></script>
 
     <!-- Directives -->
     <script src="js/components/boardPage/boardItem.directive.js"></script>
