added players tab added single player service additional fixes

--- a/www/index.html
+++ b/www/index.html
@@ -38,6 +38,7 @@
     <script src="js/components/dashboard/dashboard.controller.js"></script>
     <script src="js/components/boardPage/boardPage.controller.js"></script>
     <script src="js/components/settings/settings.controller.js"></script>
+    <script src="js/components/players/players.controller.js"></script>
 
     <!-- Directives -->
     <script src="js/components/boardPage/boardItem.directive.js"></script>
@@ -45,6 +46,7 @@
 
     <!-- Services -->
     <script src="js/services/boardItemsService.js"></script>
+    <script src="js/services/singlePlayerService.js"></script>
 
 </head>
 <body ng-app="dartsApp">
