added single player directive options: create new player and add to DOM

--- a/www/index.html
+++ b/www/index.html
@@ -25,6 +25,7 @@
     -->
 
     <!-- ionic/angularjs js -->
+    <script src="lib/jquery/dist/jquery.min.js"></script>
     <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="lib/ion-ripple/ion-ripple.min.js"></script>
 
@@ -43,6 +44,7 @@
     <!-- Directives -->
     <script src="js/components/boardPage/boardItem.directive.js"></script>
     <script src="js/components/boardPage/singlePlayerInfo.directive.js"></script>
+    <script src="js/components/players/playerDetails.directive.js"></script>
 
     <!-- Services -->
     <script src="js/services/boardItemsService.js"></script>
